
[tool.poetry]
name = "phoenix-ai-services"
version = "0.2.8.0"
description = "Unified RAG and Tool API Service for Phoenix Agentic AI Framework"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "phoenix_ai_services" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.120"
uvicorn = "^0.27"
mcp = "^1.9.4"
sse-starlette = "1.6.1"
phoenix-ai = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
